--- a/client/src/Componnets/Sidebar/Sidebar.module.css
+++ b/client/src/Componnets/Sidebar/Sidebar.module.css
@@ -13,3 +13,33 @@
   gap: 1rem;
   padding: 1rem;
 }
+
+.navUl {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.logout {
+  margin-top: auto;
+  margin-inline: auto;
+  margin-bottom: 2rem;
+  width: 70%;
+  padding: 0.75rem;
+  border-radius: 5px;
+  font-size: medium;
+  background-color: var(--primary-color);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+}
+
+.logout:hover {
+  background-color: var(--secondary-color);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
