--- a/client/src/Componnets/Sidebar/Sidebar.module.css
+++ b/client/src/Componnets/Sidebar/Sidebar.module.css
@@ -4,6 +4,15 @@
   width: 250px;
   display: flex;
   flex-direction: column;
+  z-index: 100;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.nav h1 {
+  color: var(--primary-color);
+  font-size: 2rem;
+  padding: 1rem;
+  text-align: center;
 }
 
 .menu {
