--- a/client/src/Pages/Login/Login.module.css
+++ b/client/src/Pages/Login/Login.module.css
@@ -16,11 +16,18 @@
   justify-content: center;
   align-items: center;
   background-color: var(--light-color);
+  height: auto;
+  background-image: url(/public/assets/triangle.svg);
+  background-size: cover;
+  
 }
 
 .loginDivImg div h1 {
   font-size: 3rem;
-  color: var(--primary-color);
+  color: white;
+}
+.loginDivImg div p {
+  color: white;
 }
 
 .login-img {
@@ -28,13 +35,39 @@
   height: auto;
   border-radius: 10px;
 }
+.loginForm{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+.loginForm h2{
+  font-size: 2rem;
+  color: var(--primary-color);
+}
+.loginForm p{
+  font-size: 14px;
+}
 
 @media screen and (max-width: 768px) {
   .container {
     flex-direction: column;
   }
+  .loginForm {
+    width: 100%;
+    margin: auto;
+  }
 
   .loginDivImg {
     display: none;
   }
+  /* .loginForm h2{
+    font-size: 3rem;
+    color: var(--primary-color);
+  }
+  .loginForm p{
+    font-size: 16px;
+  } */
 }
