--- a/client/src/Componnets/Modal/Modal.module.css
+++ b/client/src/Componnets/Modal/Modal.module.css
@@ -10,8 +10,8 @@
 }
 
 .modalContent {
-  width: 50%;
-  height: 50%;
+  /* width: 50%; */
+  /* height: 50%; */
   background-color: var(--light-color);
   position: absolute;
   top: 50%;
@@ -24,4 +24,13 @@
   align-items: center;
   gap: 2rem;
   padding: 2rem;
+}
+
+.modalContent span {
+  cursor: pointer;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  font-size: 2rem;
+  color: var(--primary-color);
 }
