--- a/client/src/Componnets/Sidebar/QuickAccessBar.module.css
+++ b/client/src/Componnets/Sidebar/QuickAccessBar.module.css
@@ -6,7 +6,6 @@
   height: 100%;
 
   background-color: #f5f5f5;
-  padding-top: 40%;
 }
 
 .mainBarContainer h1 {
@@ -32,4 +31,133 @@
 
 .heading span {
   cursor: pointer;
+}
+
+.createForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 500px;
+  padding: 20px;
+  background-color: var(--light-color);
+  border-radius: 10px;
+}
+
+.inputDiv {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  gap: 0.5rem;
+  /* margin: 1rem; */
+}
+
+.inputDiv input {
+  /* width: 100%; */
+  border: 1px solid var(--primary-color);
+  padding: 10px;
+
+  border-radius: 5px;
+  outline: none;
+}
+
+.inputDiv input::placeholder {
+  font-size: 1rem;
+}
+
+.inputDiv input:focus {
+  border: 1px solid var(--primary-color);
+}
+
+.inputDiv label {
+  font-size: 0.9rem;
+  color: var(--primary-color);
+}
+
+.inputDivBtn {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--primary-color);
+  color: #fff;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  width: 100%;
+  margin-inline: auto;
+  margin-top: 1rem;
+}
+
+.searchTeams {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+  border: 1px solid var(--primary-color);
+  border-radius: 5px;
+}
+
+.searchTeams input {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  background-color: var(--light-color);
+  /* border: 1px solid var(--primary-color); */
+  border-radius: 5px;
+  outline: none;
+}
+
+.searchTeams span {
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: var(--primary-color);
+  margin-right: 5px;
+}
+
+.teamsTabs {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+  padding: 20px;
+  background-color: var(--light-color);
+  border-radius: 10px;
+}
+
+.teamNames {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: var(--primary-color);
+  color: #fff;
+  font-size: 0.8rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.teamNames:hover {
+  background-color: var(--secondary-color);
+}
+
+.teamNamesActive {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: var(--secondary-color);
+  color: #fff;
+  font-size: 0.8rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
 }
