--- a/client/src/Componnets/Sidebar/Sidebar.module.css
+++ b/client/src/Componnets/Sidebar/Sidebar.module.css
@@ -1,7 +1,7 @@
 .nav {
   background-color: var(--light-color);
   height: 100vh;
-  width: 250px;
+  width: auto;
   display: flex;
   flex-direction: column;
   z-index: 100;
@@ -21,6 +21,7 @@
   align-items: center;
   gap: 1rem;
   padding: 1rem;
+  cursor: pointer;
 }
 
 .navUl {
