--- a/client/src/Pages/Teams/Teams.module.css
+++ b/client/src/Pages/Teams/Teams.module.css
@@ -5,7 +5,7 @@
 }
 
 .subBarDiv {
-  width: 250px;
+  width: 300px;
   height: 100%;
   background-color: var(--light-color);
   display: flex;
@@ -13,4 +13,24 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
+}
+
+.taskView {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  gap: 20px;
+}
+
+.teamView {
+  margin-top: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+.teamView h1 {
+  font-size: 2rem;
+  color: var(--primary-color);
 }
